scripts/nullaway/wpi/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8.txt
../wpi/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/Lollipop.java:14: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.flavor = flavor;
                    ^
    (see http://t.uber.com/nullaway )
../wpi/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/Chocolate.java:16: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.chocolateType = chocolateType;
                           ^
    (see http://t.uber.com/nullaway )
../wpi/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/Chocolate.java:17: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.stuffingType = stuffingType;
                          ^
    (see http://t.uber.com/nullaway )
../wpi/urlcbcf8d4d58_vikaleshch_task1_tgz-pJ8-by_epam_christmasgift_main_MainJ8/src/by/epam/christmasgift/candy/Caramel.java:14: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.caramelType = caramelType;
                         ^
    (see http://t.uber.com/nullaway )
4 errors
